# kindle-bt-api

./: README.md  meson.build
src/: compat_ace.c  kindlebt.c  main.c  main.cpp
src/include/: ace.h  ace_bt.h  ace_status.h  bluetooth_api.h  bluetooth_beacon_api.h  bluetooth_ble_api.h  bluetooth_ble_defines.h  bluetooth_ble_gatt_client_api.h  bluetooth_common_api.h  bluetooth_defines.h  bluetooth_manager_ble_gattc_util.h  bluetooth_session_api.h  compat_ace.h
src/include/ace/: ace_modules.h  bluetooth_api.h  bluetooth_beacon_api.h  bluetooth_beacon_clients.h  bluetooth_beacon_defines.h  bluetooth_ble_defines.h  bluetooth_ble_gatt_client_api.h  bluetooth_common_api.h  bluetooth_defines.h  bluetooth_session_api.h  osal_alloc.h
src/include/core/: defines.h
